SignedExchange: Accept b3 magic strings

This CL will let Chromium accept the b3 version and its magic strings.
We will keep support for b2 for a very short period (1 week) for transition.

Bug: 919417, 919424
Change-Id: I42d32b7c98652d92dcba0eb71395d937d3ad3fff
Reviewed-on: https://chromium-review.googlesource.com/c/1401825
Commit-Queue: Kouhei Ueno <kouhei@chromium.org>
Reviewed-by: Kunihiko Sakamoto <ksakamoto@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621075}
Former-commit-id: 9007cf2bea672f700c14e63ee66df6d37d47e01f