content/browser/web_package/signed_exchange_consts.h
@@ -10,7 +10,8 @@ namespace content {
 constexpr char kAcceptHeaderSignedExchangeSuffix[] =
     ",application/signed-exchange;v=b2";
 
-enum class SignedExchangeVersion { kUnknown, kB2 };
+// TODO(crbug.com/919424) Remove support for kB2
+enum class SignedExchangeVersion { kUnknown, kB2, kB3 };
 
 // Field names defined in the application/signed-exchange content type:
 // https://wicg.github.io/webpackage/draft-yasskin-httpbis-origin-signed-exchanges-impl.html#application-signed-exchange
