content/browser/web_package/signed_exchange_utils.cc
@@ -140,6 +140,8 @@ base::Optional<SignedExchangeVersion> GetSignedExchangeVersion(
   //        [spec text]
   auto iter = params.find("v");
   if (iter != params.end()) {
+    if (iter->second == "b3")
+      return base::make_optional(SignedExchangeVersion::kB3);
     if (iter->second == "b2")
       return base::make_optional(SignedExchangeVersion::kB2);
     return base::make_optional(SignedExchangeVersion::kUnknown);
